content/docs/core/1.3.0/reference/vendr-web-models/README.md
---
title: Vendr.Web.Models
description: API reference for Vendr.Web.Models in Vendr, the eCommerce solution for Umbraco v8+
---
## Vendr.Web.Models namespace

| Public Type | Description |
| --- | --- |
| class [AllowedCountryDto](allowedcountrydto/) |  |
| class [AllowedCountryRegionDto](allowedcountryregiondto/) |  |
| class [CountryBasicDto](countrybasicdto/) |  |
| class [CountryDto](countrydto/) |  |
| class [CountryEditDto](countryeditdto/) |  |
| class [CountryRegionTaxRateDto](countryregiontaxratedto/) |  |
| class [CountrySaveDto](countrysavedto/) |  |
| class [CountryWithRegionsBasicDto](countrywithregionsbasicdto/) |  |
| class [CurrencyBasicDto](currencybasicdto/) |  |
| class [CurrencyDto](currencydto/) |  |
| class [CurrencyEditDto](currencyeditdto/) |  |
| class [CurrencySaveDto](currencysavedto/) |  |
| class [DiscountBasicDto](discountbasicdto/) |  |
| class [DiscountCodeDto](discountcodedto/) |  |
| class [DiscountDto](discountdto/) |  |
| class [DiscountEditDto](discounteditdto/) |  |
| class [DiscountRewardConfigDto](discountrewardconfigdto/) |  |
| class [DiscountRuleConfigDto](discountruleconfigdto/) |  |
| class [DiscountSaveDto](discountsavedto/) |  |
| class [EmailTemplateBasicDto](emailtemplatebasicdto/) |  |
| class [EmailTemplateDto](emailtemplatedto/) |  |
| class [EmailTemplateEditDto](emailtemplateeditdto/) |  |
| class [EmailTemplateSaveDto](emailtemplatesavedto/) |  |
| class [EntityBasicDto](entitybasicdto/) |  |
| class [FormattedValueDto&lt;TValue&gt;](formattedvaluedto-1/) |  |
| class [GiftCardBasicDto](giftcardbasicdto/) |  |
| class [GiftCardDto](giftcarddto/) |  |
| class [GiftCardEditDto](giftcardeditdto/) |  |
| class [GiftCardSaveDto](giftcardsavedto/) |  |
| class [GiftCardSearchDto](giftcardsearchdto/) |  |
| interface [IHasPath](ihaspath/) |  |
| class [NamedEntityBasicDto](namedentitybasicdto/) |  |
| class [OrderBasicDto](orderbasicdto/) |  |
| class [OrderDto](orderdto/) |  |
| class [OrderEditDto](ordereditdto/) |  |
| class [OrderLineDto](orderlinedto/) |  |
| class [OrderSaveDto](ordersavedto/) |  |
| class [OrderSearchDto](ordersearchdto/) |  |
| class [OrderStatusBasicDto](orderstatusbasicdto/) |  |
| class [OrderStatusDto](orderstatusdto/) |  |
| class [OrderStatusEditDto](orderstatuseditdto/) |  |
| class [OrderStatusSaveDto](orderstatussavedto/) |  |
| class [PaymentMethodBasicDto](paymentmethodbasicdto/) |  |
| class [PaymentMethodDto](paymentmethoddto/) |  |
| class [PaymentMethodEditDto](paymentmethodeditdto/) |  |
| class [PaymentMethodSaveDto](paymentmethodsavedto/) |  |
| class [PricePropertyValue](pricepropertyvalue/) |  |
| class [PropertyDto](propertydto/) |  |
| class [PropertyValueDto](propertyvaluedto/) |  |
| class [RegionBasicDto](regionbasicdto/) |  |
| class [RegionDto](regiondto/) |  |
| class [RegionEditDto](regioneditdto/) |  |
| class [RegionSaveDto](regionsavedto/) |  |
| class [RegisteredCustomerInfoDto](registeredcustomerinfodto/) |  |
| abstract class [SearchDtoBase](searchdtobase/) |  |
| class [ServicePriceDto](servicepricedto/) |  |
| class [ShippingMethodBasicDto](shippingmethodbasicdto/) |  |
| class [ShippingMethodDto](shippingmethoddto/) |  |
| class [ShippingMethodEditDto](shippingmethodeditdto/) |  |
| class [ShippingMethodSaveDto](shippingmethodsavedto/) |  |
| class [StockDto](stockdto/) |  |
| class [StoreBasicDto](storebasicdto/) |  |
| class [StoreDto](storedto/) |  |
| class [StoreEditDto](storeeditdto/) |  |
| class [StoreSaveDto](storesavedto/) |  |
| class [StoreStatsDto](storestatsdto/) |  |
| class [StoreSummaryDto](storesummarydto/) |  |
| class [TaxClassBasicDto](taxclassbasicdto/) |  |
| class [TaxClassDto](taxclassdto/) |  |
| class [TaxClassEditDto](taxclasseditdto/) |  |
| class [TaxClassSaveDto](taxclasssavedto/) |  |

## Vendr.Web.Models.Mappers namespace

| Public Type | Description |
| --- | --- |
| static class [AllowedCountryRegionMapper](allowedcountryregionmapper/) |  |
| static class [CountryMapper](countrymapper/) |  |
| static class [CurrencyMapper](currencymapper/) |  |
| static class [DiscountMapper](discountmapper/) |  |
| static class [EmailTemplateMapper](emailtemplatemapper/) |  |
| static class [GiftCardMapper](giftcardmapper/) |  |
| static class [OrderMapper](ordermapper/) |  |
| static class [OrderStatusMapper](orderstatusmapper/) |  |
| static class [PaymentMethodMapper](paymentmethodmapper/) |  |
| static class [RegionMapper](regionmapper/) |  |
| static class [ServicePriceMapper](servicepricemapper/) |  |
| static class [ShippingMethodMapper](shippingmethodmapper/) |  |
| static class [StoreMapper](storemapper/) |  |
| static class [TaxClassMapper](taxclassmapper/) |  |
| static class [TaxRateMapper](taxratemapper/) |  |

## Vendr.Web.Models.Reporting namespace

| Public Type | Description |
| --- | --- |
| class [CartConversionRateDataDto](cartconversionratedatadto/) |  |
| class [CartConversionRatesReportDataDto](cartconversionratesreportdatadto/) |  |
| class [ChartDataDto&lt;TValue&gt;](chartdatadto-1/) |  |
| class [ChartDatasetDto&lt;TValue&gt;](chartdatasetdto-1/) |  |
| class [ChartReportDataDto&lt;TValue&gt;](chartreportdatadto-1/) |  |
| class [ChartReportDataDto&lt;TValue,TChartDataValue&gt;](chartreportdatadto-2/) |  |
| class [ProductSalesDataDto](productsalesdatadto/) |  |
| class [ProductSalesReportDataDto](productsalesreportdatadto/) |  |

<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Web.dll -->
